[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
askama = "0.12.1"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
thiserror = "1.0.50"
